# QianDengLake

./: .gitignore  AboutQianDengLake.cpp  AboutQianDengLake.h  AboutQianDengLake.ui  CMakeLists.txt  Change Log.txt  Info.qrc  LICENSE  QianDengLakeProject.h  QianDengLake_zh_CN.ts  README.md  changlog.cpp  changlog.h  changlog.ui  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup_dep.sh  thanks.cpp  thanks.h  thanks.ui
Icons/: Icons.qrc
Preferences/: editor.cpp  editor.h  editor.ui  enviroment.cpp  enviroment.h  enviroment.ui  qiandenglakeconfigset.cpp  qiandenglakeconfigset.h  qiandenglakeconfigset.ui
QScintilla/src/release/: moc_predefs.h
QianDengLakeProject/: QianDengConfig.cpp  QianDengConfig.h  QianDengLakeProject.cpp  QianDengLakeProject.h
backend_QianDengLake/: Cargo.toml
backend_QianDengLake/src/: lib.rs  test.rs
backend_QianDengLake/src/user_config/: mod.rs  value.rs
lexer/: lexerRust.h
notepad/: filemanager.h  notepad.cpp  notepad.h  notepad.ui
resources/: Cpp.txt  resources.qrc
