[package]
name = "backend_QianDengLake"
version = "0.1.0"
edition = "2021"
[lib]
name = "backendqiandenglake"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
serde_json = "*"
serde = {version = "*",features = ["derive"]}
hyper = "*"
anyhow = "*"